# gemm_explore

./: CMakeLists.txt  README.md
doc/: api-design.md
include/: common.h  gemm.h
script/: build.sh
src/: gemm.cpp
test/: gemm_unittest.cpp
test/3rd/OpenBLAS/mac_m1/include/: config.h
